# Advance_Programing

./: AIPlayer.cpp  AIPlayer.h  AvailableFinder.h  BoardManager.cpp  BoardManager.h  CMakeLists.txt  Checker.cpp  Checker.h  GameManager.cpp  GameManager.h  Graphic.h  Matrix.h  Player.cpp  RegularRules.cpp  RegularRules.h  Reversi.cpp  ex3.cpp  info.txt  makefile
etc/: log.txt
exe/: connection_settings_client.txt
server/: RunServer.cpp  Server.cpp  Server.h
src/: AIPlayer.cpp  AIPlayer_Test.h  AvailableFinder.cpp  AvailableFinder.h  BoardManager.cpp  BoardManager.h  Checker.cpp  Checker.h  ConsolePlayer.cpp  ConsolePlayer.h  ConsolePrinter.cpp  ConsolePrinter.h  GameManager.cpp  GameManager.h  Graphic.cpp  Matrix.h  Player.cpp  Player.h  Point.cpp  Point.h  RegularRules.cpp  Reversi.cpp  Reversi.h  TempClientMain.cpp  ex3.cpp
src/client/: AIPlayer.cpp  AIPlayer.h  AvailableFinder.h  BoardManager.cpp  BoardManager.h  Checker.cpp  Checker.h  ClientMain.cpp  ConnectionSettings.cpp  ConnectionSettings.h  ConsolePlayer.cpp  ConsolePrinter.cpp  ConsolePrinter.h  GameManager.cpp  GameManager.h  Graphic.cpp  Graphic.h  HumanPlayer.cpp  HumanPlayer.h  PlayReversi.cpp  Player.cpp  Player.h  Point.cpp  RegularRules.h  RemotePlayerReceiver.cpp  RemotePlayerReceiver.h  RemotePlayerReciver.cpp  RemotePlayerReciver.h  RemotePlayerSender.cpp  RemotePlayerSender.h  Reversi.cpp  Reversi.h  ServerLinker.cpp  ServerLinker.h
src/client/tests/: AIPlayer.cpp  BoardManager_Test.cpp  ConsolePrinter_Test.cpp  RegularRule_Test.cpp
src/connectionSetting/: ConnectionSettings.cpp  ConnectionSettings.h
src/server/: Command.cpp  Command.h  CommandClose.cpp  CommandClose.h  CommandGamesList.cpp  CommandGamesList.h  CommandJoin.cpp  CommandJoin.h  CommandManager.cpp  CommandManager.h  CommandStart.cpp  CommandStart.h  MatchHandler.cpp  MatchHandler.h  MatchManager.cpp  MatchManager.h  Server.cpp  Server.h  ServerMain.cpp  Task.h  TheardPool.cpp  TheardPool.h
src/tests/: AIPlayer.cpp  BoardManager_Test.cpp  ConsolePrinter_Test.cpp  RegularRule_Test.cpp  Temp.cpp
tests/: AIPlayer.cpp  AIPlayer_Test.cpp  BoardManager_Test.cpp  ConsolePrinter_Test.cpp  RegularRule_Test.cpp  TryTest.cpp  gtest_main.cpp
